Fix titles on mobile devices

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -22,6 +22,13 @@ body {
 	line-height: 1.5em;
 }
 
+h1,h2,h3,h4,h5,h6 {
+	line-height: 1.4em;
+	max-width: 95%;
+	margin-left: auto;
+	margin-right: auto;
+}
+
 a {
 	color: var(--text-em);
 	text-decoration: dotted underline;
